*** HEAD CONTENT *****************************************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  
  PRs Fixed in this Release
  ================================================================================
  3230 		Search - Too many type references for query ending with * (1GAZVGI)
  
  PRs Closed in this Release
  ===============================================================================
  3254      Indexer - Should nest index source retrieval in IWorkspaceRunnable (1GD7J6F)  
  3225      IJavaProject.findPackageFragment strange semantic (1GAOLWQ)  
  3218      No interface to polymorphically acess ICompilationUnit (1G8D2ZP)  
  3205      Problems with IJavaModel.findPackageFragment (1G456DO)    
  3197      DCR - OpenOnSelection - Code resolve doesn't work on declarations (1G0UX9V)  
  3177      64kb method should be a configurable problem (1FJHGVF)  

**********************************************************************************
*** STABLE CONTENT (2.0 STREAM, v_204) *******************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  * Classpath entries (except for source folders) can be tagged as exported upon
    creation. When exported, an entry is contributed to dependent projects along 
    with its output location.
    Added APIs:
    
    Testing status of a given entry
     + IClasspathEntry.isExported()

    Creating entries with export flag
     + JavaCore.newProjectEntry(IPath, boolean)
     + JavaCore.newLibraryEntry(IPath, IPath, IPath, boolean)
     + JavaCore.newVariableEntry(IPath, boolean)
     
    Helper method computing a resolved and expanded path (all exports from prerequisites)